# prai

./: AGENTS.md  Cargo.toml  README.md
.codex/environments/: environment.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  git.rs  main.rs
src/agent/: cursor.rs  mod.rs  provider.rs  stream.rs
src/app/: actions.rs  keys.rs  mod.rs
src/github/: client.rs  mod.rs  provider.rs  types.rs
src/ui/: additional_instructions.rs  agent_timeline.rs  comment_detail.rs  comment_list.rs  mod.rs  pr_list.rs  reply.rs  splash.rs  status_bar.rs  text_buffer.rs  theme.rs
