[package]
name = "prai"
version = "0.1.0"
edition = "2021"
description = "AI-Powered Code Review Assistant — handle PR comments with AI agents"
license = "MIT"
repository = "https://github.com/orgoldfus/prai"
keywords = ["cli", "tui", "github", "code-review", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6"
futures = "0.3.32"
open = "5"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
throbber-widgets-tui = "0.11.0"
tokio = { version = "1", features = ["full"] }
toml = "1.0"
unicode-width = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
